Sticky-Header: hide sticky-header initially and only show it when there is an actual header inside it. This prevents a layout gap in the compare-view, where the sticky header would mistakenly take up a row/column in the grid. See #67341

--- a/src/scss/themes/fylr/components/_sticky-header.scss
+++ b/src/scss/themes/fylr/components/_sticky-header.scss
@@ -52,6 +52,7 @@
 }
 
 .cui-sticky-header-control {
+	display: none; // hide initially to prevent grid gap from taking effect (e.g. standard view overlay)
 	position: sticky;
 	overflow: hidden;
 	top: 0 !important;
@@ -62,10 +63,9 @@
 	z-index: 1;
 	flex: 0 0 auto; // make sure header is visible when placed in flex-layout (see metadata-browser)
 
-	// todo: do we need this ?
-	// &:has(.cui-sticky-header) {
-	// 	display: block;
-	// }	
+	&:has(.cui-sticky-header) {
+		display: block;
+	}	
 
 	.cui-sticky-header {
 		position: absolute;
